# AudioToolboxWrapper

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeASM_YASMInformation.cmake  CMakeDetermineASM_YASMCompiler.cmake
include/AudioToolbox/: AudioToolbox.h
include/AudioToolbox/CoreAudio/: AudioCodec.h  CoreAudioTypes.h  MacTypes.h
include/CoreAudio/: CoreAudio.h
misc/: handbrake_appleaac_win.diff
src/: AudioToolboxEntryWrapper.asm  AudioToolboxLoader.c  testapp.c
